# belief-state-transformers

./: .gitignore  HMM.py  probe.py  pyproject.toml  readme.md  sample_acts.py  test_hmm.py  train.py  train_autoencoder.py  train_probe.py  train_transformer.py  train_vae.py  transformer.py
.cursor/rules/: read-the-readme.mdc
final_checkpoints/transformer/adamw/: step_200000.pt  step_400000.pt  step_600000.pt  step_800000.pt  step_900000.pt
final_checkpoints/transformer/sgd/: probe_1000000.pt  step_1000.pt  step_100000.pt  step_1000000.pt  step_200000.pt  step_300000.pt  step_400000.pt  step_500000.pt  step_600000.pt  step_700000.pt  step_800000.pt  step_900000.pt
interventions/: __init__.py  base.py  steering.py  zero_ablation.py
notebooks/: plot_probe_3d.ipynb
probes/: __init__.py  autoencoder.py  base.py  linear.py  vae.py
scripts/: check_probe_rank.py  inspect_steering_results.py  plot_additive_steering_from_results.py  plot_additive_steering_sweep.py  plot_belief_probe_comparison.py  plot_beliefs_by_position.py  plot_probe_3d_four_views.py  plot_steering_from_results.py  plot_steering_summary.py  run_additive_steering_sweep.py  run_steering_experiment.py  run_zero_ablation_sweep.py  sample_acts.py  train_autoencoder.py  train_probe.py  train_transformer.py  train_vae.py
tests/: test_hmm.py  test_transformer.py
utils/: plotting.py  simplex.py
