[project]
name = "belief-state-transformers"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.2",
    "ipykernel>=7.1.0",
    "ipympl>=0.10.0",
    "ipython>=9.10.0",
    "matplotlib>=3.10.8",
    "pyarrow==14.0.2",
    "pytest>=9.0.2",
    "torch>=2.10.0",
    "tqdm>=4.67.0",
    "transformer-lens>=2.17.0",
    "wandb==0.22.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
